--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -139,78 +139,84 @@
             </div>
         </section>
         <section class="consequences" style="background-image: url(assets/img/bg112.png);">
-            <div class="section__heading color_white">
-                <h2 class="heading_h1">
-                    Ряд ускладнень, які можуть виникнути
-                    у пацієнтів будь-якого віку і статі
-                </h2>
-            </div>
-            <ul class="consequences-list text_md">
-                <li class="consequences-list__item frosted">
-                    ниркова <br>
-                    недостатність
-                </li>
-                <li class="consequences-list__item frosted">
-                    зараження <br>
-                    крові (сепсис)
-                </li>
-                <li class="consequences-list__item frosted">
-                    гнійне ураження <br>
-                    нирки (карбункул)
-                </li>
-                <li class="consequences-list__item frosted">
-                    гіпертонічні <br>
-                    напади
-                </li>
-                <li class="consequences-list__item frosted">
-                    рубцювання <br>
-                    нирки
-                </li>
-                <li class="consequences-list__item frosted">
-                    ксантогрануломатоз нирки
-                </li>
-            </ul>
-            <div class="block-more-info block-more-info_white text_md hide-info">
-                <p>
-                    Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
-                    постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
-                    років,
-                    жінки будь-якого віку, а також літні чоловіки в віці від 55
-                </p>
-                <p>
-                    Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
-                    Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
-                    пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
-                    при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
-                    схильна до 1 з кожних 10 жінок.
-                </p>
-                <p>
-                    Факторами ризику можуть бути також:
-                </p>
-
-                <ul>
-                    <li>
-                        вроджені аномалії органів (уретра, нирки, сечовий міхур);
+            <div class="container">
+                <div class="section__heading color_white">
+                    <h2 class="consequences-title heading heading_h1">
+                        Ряд ускладнень, які можуть виникнути
+                        у пацієнтів будь-якого віку і статі
+                    </h2>
+                </div>
+                <ul class="consequences-list text_md">
+                    <li class="consequences-list__item frosted">
+                        ниркова <br>
+                        недостатність
                     </li>
-                    <li>
-                        операції в області сечовидільної системи;
+                    <li class="consequences-list__item frosted">
+                        зараження <br>
+                        крові (сепсис)
                     </li>
-                    <li>
-                        установка катетера в сечовий міхур;
+                    <li class="consequences-list__item frosted">
+                        гнійне ураження <br>
+                        нирки (карбункул)
                     </li>
-                    <li>
-                        травма спинного мозку
+                    <li class="consequences-list__item frosted">
+                        гіпертонічні <br>
+                        напади
                     </li>
-                    <li>
-                        випадання матки;
+                    <li class="consequences-list__item frosted">
+                        рубцювання <br>
+                        нирки
                     </li>
-                    <li>
-                        СНІД.
+                    <li class="consequences-list__item frosted">
+                        ксантогрануломатоз нирки
                     </li>
                 </ul>
-            </div>
-            <div class="wrap-btn">
-                <button class="show-more btn btn_glass">Більше інформації</button>
+                <div class="block-more-info block-more-info_white text_md hide-info">
+                    <p>
+                        Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
+                        неправильній
+                        постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
+                        років,
+                        жінки будь-якого віку, а також літні чоловіки в віці від 55
+                    </p>
+                    <p>
+                        Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
+                        захворювань.
+                        Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
+                        гострий
+                        пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
+                        пієлонефрит
+                        при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
+                        схильна до 1 з кожних 10 жінок.
+                    </p>
+                    <p>
+                        Факторами ризику можуть бути також:
+                    </p>
+
+                    <ul>
+                        <li>
+                            вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                        </li>
+                        <li>
+                            операції в області сечовидільної системи;
+                        </li>
+                        <li>
+                            установка катетера в сечовий міхур;
+                        </li>
+                        <li>
+                            травма спинного мозку
+                        </li>
+                        <li>
+                            випадання матки;
+                        </li>
+                        <li>
+                            СНІД.
+                        </li>
+                    </ul>
+                </div>
+                <div class="wrap-btn">
+                    <button class="show-more btn btn_glass">Більше інформації</button>
+                </div>
             </div>
         </section>
         <section class="prevention">
@@ -257,6 +263,30 @@
                         </div>
                     </div>
 
+                </div>
+                <div class="block-more-info block-more-info_white text_md hide-info">
+                    <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
+                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються антибіотики
+                        при
+                        пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+
+                    <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                        сечовипускання.
+                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку комплексної
+                        терапії ступінь проявів симптомів знижується.</p>
+
+                    <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
+                        періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під час
+                        ремісії
+                        обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+
+                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть виникати
+                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь і
+                        на
+                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення пієлонефриту.</p>
+                </div>
+                <div class="wrap-btn">
+                    <button class="show-more btn btn_glass">Більше інформації</button>
                 </div>
             </div>
         </section>
