--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -140,78 +140,84 @@
             </div>
         </section>
         <section class="consequences" style="background-image: url(assets/img/bg112.png);">
-            <div class="section__heading color_white">
-                <h2 class="heading_h1">
-                    Сечокам'яна хвороба, якщо вчасно не надати допомогу,
-                    може призвести до більш серйозних наслідків:
-                </h2>
-            </div>
-            <ul class="consequences-list text_md">
-                <li class="consequences-list__item frosted">
-                    Проникнення, розвиток
-                    і поширення інфекцій
-                </li>
-                <li class="consequences-list__item frosted">
-                    Пієлонефрит та інші захворювання нирок
-                </li>
-                <li class="consequences-list__item frosted">
-                    Проблеми з кишечником
-                    - зокрема, парез
-                </li>
-                <li class="consequences-list__item frosted">
-                    Скупчення
-                    гнійних утворень
-                </li>
-                <li class="consequences-list__item frosted">
-                    Ниркова <br>
-                    недостатність
-                </li>
-                <li class="consequences-list__item frosted">
-                    Бактеріальний <br>
-                    шок
-                </li>
-            </ul>
-            <div class="block-more-info block-more-info_white text_md hide-info">
-                <p>
-                    Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
-                    постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
-                    років,
-                    жінки будь-якого віку, а також літні чоловіки в віці від 55
-                </p>
-                <p>
-                    Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
-                    Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
-                    пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
-                    при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
-                    схильна до 1 з кожних 10 жінок.
-                </p>
-                <p>
-                    Факторами ризику можуть бути також:
-                </p>
-
-                <ul>
-                    <li>
-                        вроджені аномалії органів (уретра, нирки, сечовий міхур);
+            <div class="container">
+                <div class="section__heading color_white">
+                    <h2 class="heading_h1">
+                        Сечокам'яна хвороба, якщо вчасно не надати допомогу,
+                        може призвести до більш серйозних наслідків:
+                    </h2>
+                </div>
+                <ul class="consequences-list text_md">
+                    <li class="consequences-list__item frosted">
+                        Проникнення, розвиток
+                        і поширення інфекцій
                     </li>
-                    <li>
-                        операції в області сечовидільної системи;
+                    <li class="consequences-list__item frosted">
+                        Пієлонефрит та інші захворювання нирок
                     </li>
-                    <li>
-                        установка катетера в сечовий міхур;
+                    <li class="consequences-list__item frosted">
+                        Проблеми з кишечником
+                        - зокрема, парез
                     </li>
-                    <li>
-                        травма спинного мозку
+                    <li class="consequences-list__item frosted">
+                        Скупчення
+                        гнійних утворень
                     </li>
-                    <li>
-                        випадання матки;
+                    <li class="consequences-list__item frosted">
+                        Ниркова <br>
+                        недостатність
                     </li>
-                    <li>
-                        СНІД.
+                    <li class="consequences-list__item frosted">
+                        Бактеріальний <br>
+                        шок
                     </li>
                 </ul>
-            </div>
-            <div class="wrap-btn">
-                <button class="show-more btn btn_glass">Більше інформації</button>
+                <div class="block-more-info block-more-info_white text_md hide-info">
+                    <p>
+                        Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
+                        неправильній
+                        постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
+                        років,
+                        жінки будь-якого віку, а також літні чоловіки в віці від 55
+                    </p>
+                    <p>
+                        Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
+                        захворювань.
+                        Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
+                        гострий
+                        пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
+                        пієлонефрит
+                        при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
+                        схильна до 1 з кожних 10 жінок.
+                    </p>
+                    <p>
+                        Факторами ризику можуть бути також:
+                    </p>
+
+                    <ul>
+                        <li>
+                            вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                        </li>
+                        <li>
+                            операції в області сечовидільної системи;
+                        </li>
+                        <li>
+                            установка катетера в сечовий міхур;
+                        </li>
+                        <li>
+                            травма спинного мозку
+                        </li>
+                        <li>
+                            випадання матки;
+                        </li>
+                        <li>
+                            СНІД.
+                        </li>
+                    </ul>
+                </div>
+                <div class="wrap-btn">
+                    <button class="show-more btn btn_glass">Більше інформації</button>
+                </div>
             </div>
         </section>
     </main>
