--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -220,6 +220,77 @@
                 </div>
             </div>
         </section>
+        <section class="prevention">
+            <div class="container">
+                <h3 class="prevention__heading heading_xxl">
+                    Заходами профілактики <span class="small">циститу є наступні дії</span>
+                </h3>
+                <div class="prevention__list">
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/shampoo1.svg);"></div>
+                        <div class="prevention__text">
+                            Дотримання
+                            правил
+                            гігієни
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                        <div class="prevention__text">
+                            Мінімізувати
+                            вживання алкоголю
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                        <div class="prevention__text">
+                            Правильний раціон
+                            харчування
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon"
+                             style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                        <div class="prevention__text">
+                            Випивати добову
+                            норму води
+                        </div>
+                    </div>
+                    <div class="prevention__item">
+                        <div class="prevention__icon" style="background-image: url(assets/img/svg/bed1.svg);"></div>
+                        <div class="prevention__text">
+                            Напівпостільний
+                            режим
+                        </div>
+                    </div>
+
+                </div>
+                <div class="block-more-info block-more-info_white text_md hide-info">
+                    <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
+                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються антибіотики
+                        при
+                        пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+
+                    <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                        сечовипускання.
+                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку комплексної
+                        терапії ступінь проявів симптомів знижується.</p>
+
+                    <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
+                        періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під час
+                        ремісії
+                        обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+
+                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть виникати
+                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь і
+                        на
+                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення пієлонефриту.</p>
+                </div>
+                <div class="wrap-btn">
+                    <button class="show-more btn btn_glass">Більше інформації</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
