--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -92,8 +92,9 @@
     <div class="backdrop"></div>
     <main class="main  page page-pyelonephritis">
         <div class="container">
+
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Пієлонефрит</h1>
+                <h1 class="page__title heading_h1">Пієлонефрит</h1>
                 <div class="page__sub-title heading_h4">
                     захворювання нирок, що буває одно- або двостороннім і протікає
                     в гострій або хронічній формі.
