--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -93,7 +93,7 @@
     <main class="main  page">
         <div class="container">
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Пісок <br>
+                <h1 class="page__title heading_h1">Пісок <br>
                     у нирках</h1>
                 <div class="page__sub-title heading_h4">
                     це початкова форма нефролітіазу, або сечокам’яної хвороби
