--- a/cystitis.html
+++ b/cystitis.html
@@ -95,7 +95,7 @@
 
         <div class="container">
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Цистит</h1>
+                <h1 class="page__title heading_h1">Цистит</h1>
                 <div class="page__sub-title heading_h4">
                     це запальне захворювання слизової оболонки сечового міхура. Може протікати в гострій
                     або хронічній формі.
