--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -93,7 +93,7 @@
     <main class="main  page">
         <div class="container">
             <div class="page__heading frosted">
-                <h1 class="page__title h1">Сечокам’яна
+                <h1 class="page__title heading_h1">Сечокам’яна
                     хвороба</h1>
                 <div class="page__sub-title heading_h4">
                     це відкладення в відділах сечовидільної системи різних ущільнень,
