add section banner

--- a/index.html
+++ b/index.html
@@ -94,15 +94,17 @@
     <main class="main  home">
         <section class="section-banner" style="background-image: url(assets/img/banner-img.jpg);">
             <div class="container">
-                <div class="part part_left">
-                    <div class="section-banner__slogan">
-                        <span class="text_big text_uppercase">ПРОГРЕСИВНИЙ</span>
-                        <span class="text_huge">погляд</span><br>
-                        на можливості <br>
-                        природи
-                    </div>
-                    <button class="btn btn_main">Детальніше про препарат</button>
+                <div class="section-banner__slogan">
+                    <span class="text-big text_uppercase">ПРОГРЕСИВНИЙ</span>
+                    <span class="text-huge">погляд</span><br>
+                    на можливості <br>
+                    природи
                 </div>
+                <button class="btn btn_main">Детальніше про препарат</button>
+            </div>
+            <div class="wrap-img">
+                <img class="tablet" src="assets/img/tablet-1.png" alt="">
+                <img class="hand" src="assets/img/hand-right-1.png" alt="">
             </div>
         </section>
 
@@ -443,8 +445,8 @@
             </div>
         </div>
         <div class="disclaimer frosted">
-        <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
-        alt="Самолікування може бути шкідливим для вашого здоров'я">
+            <img class="footer__text-img" src="assets/img/svg/disclaimer.svg"
+                 alt="Самолікування може бути шкідливим для вашого здоров'я">
         </div>
     </footer>
 </div>
