--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -220,6 +220,52 @@
                 </div>
             </div>
         </section>
+        <section class="disease">
+            <div class="container">
+                <div class="types-disease">
+                    <div class="types-disease__inner">
+                        <div class="types-disease__header">
+                            <h3 class="types-disease__heading heading_h1">
+                                Залежно <span class="strong"> від локалізації</span> виділяють
+                                декілька видів хвороби
+                            </h3>
+                        </div>
+                        <ul class="disease-list text_md">
+                            <li class="disease-list__item">
+                                <div class="disease-list__icon">
+                                    <div class="disease-bg">
+
+                                    </div>
+                                </div>
+                                <h4 class="disease-list__title heading heading_h1">НЕФРОЛІТІАЗ</h4>
+
+                                <div class="disease-list__text">утворення каменів в нирках</div>
+                            </li>
+                            <li class="disease-list__item">
+                                <div class="disease-list__icon">
+                                    <div class="disease-bg">
+
+                                    </div>
+                                </div>
+                                <h4 class="disease-list__title heading heading_h1">Уретеролітіаз</h4>
+
+                                <div class="disease-list__text">наявність каменів в сечоводах</div>
+                            </li>
+                            <li class="disease-list__item">
+                                <div class="disease-list__icon">
+                                    <div class="disease-bg">
+
+                                    </div>
+                                </div>
+                                <h4 class="disease-list__title heading heading_h1">Цістолітіаз</h4>
+
+                                <div class="disease-list__text">наявність каменів в сечовому міхурі</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="prevention">
             <div class="container">
                 <h3 class="prevention__heading heading_xxl">
@@ -267,13 +313,15 @@
                 </div>
                 <div class="block-more-info block-more-info_white text_md hide-info">
                     <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
-                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються антибіотики
+                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
+                        антибіотики
                         при
                         пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
 
                     <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
                         сечовипускання.
-                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку комплексної
+                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
+                        комплексної
                         терапії ступінь проявів симптомів знижується.</p>
 
                     <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
@@ -281,16 +329,20 @@
                         ремісії
                         обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
 
-                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть виникати
-                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь і
+                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть
+                        виникати
+                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь
+                        і
                         на
-                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення пієлонефриту.</p>
+                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
+                        пієлонефриту.</p>
                 </div>
                 <div class="wrap-btn">
                     <button class="show-more btn btn_glass">Більше інформації</button>
                 </div>
             </div>
         </section>
+
     </main>
     <footer class="footer">
         <div class="container">
