--- a/kit.html
+++ b/kit.html
@@ -266,78 +266,80 @@
     --------------------------------------------------------------------------------------------
 
     <section class="consequences" style="background-image: url(assets/img/bg112.png);">
-        <div class="section__heading color_white">
-            <h2 class="heading_h1">
-                Ряд ускладнень, які можуть виникнути
-                у пацієнтів будь-якого віку і статі
-            </h2>
-        </div>
-        <ul class="consequences-list text_md">
-            <li class="consequences-list__item frosted">
-                ниркова <br>
-                недостатність
-            </li>
-            <li class="consequences-list__item frosted">
-                зараження <br>
-                крові (сепсис)
-            </li>
-            <li class="consequences-list__item frosted">
-                гнійне ураження <br>
-                нирки (карбункул)
-            </li>
-            <li class="consequences-list__item frosted">
-                гіпертонічні <br>
-                напади
-            </li>
-            <li class="consequences-list__item frosted">
-                рубцювання <br>
-                нирки
-            </li>
-            <li class="consequences-list__item frosted">
-                ксантогрануломатоз нирки
-            </li>
-        </ul>
-        <div class="block-more-info block-more-info_white text_md hide-info">
-            <p>
-                Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
-                постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
-                років,
-                жінки будь-якого віку, а також літні чоловіки в віці від 55
-            </p>
-            <p>
-                Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
-                Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
-                пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
-                при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
-                схильна до 1 з кожних 10 жінок.
-            </p>
-            <p>
-                Факторами ризику можуть бути також:
-            </p>
-
-            <ul>
-                <li>
-                    вроджені аномалії органів (уретра, нирки, сечовий міхур);
+        <div class="container">
+            <div class="section__heading color_white">
+                <h2 class="heading_h1">
+                    Ряд ускладнень, які можуть виникнути
+                    у пацієнтів будь-якого віку і статі
+                </h2>
+            </div>
+            <ul class="consequences-list text_md">
+                <li class="consequences-list__item frosted">
+                    ниркова <br>
+                    недостатність
                 </li>
-                <li>
-                    операції в області сечовидільної системи;
+                <li class="consequences-list__item frosted">
+                    зараження <br>
+                    крові (сепсис)
                 </li>
-                <li>
-                    установка катетера в сечовий міхур;
+                <li class="consequences-list__item frosted">
+                    гнійне ураження <br>
+                    нирки (карбункул)
                 </li>
-                <li>
-                    травма спинного мозку
+                <li class="consequences-list__item frosted">
+                    гіпертонічні <br>
+                    напади
                 </li>
-                <li>
-                    випадання матки;
+                <li class="consequences-list__item frosted">
+                    рубцювання <br>
+                    нирки
                 </li>
-                <li>
-                    СНІД.
+                <li class="consequences-list__item frosted">
+                    ксантогрануломатоз нирки
                 </li>
             </ul>
-        </div>
-        <div class="wrap-btn">
-            <button class="show-more btn btn_glass">Більше інформації</button>
+            <div class="block-more-info block-more-info_white text_md hide-info">
+                <p>
+                    Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при неправильній
+                    постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
+                    років,
+                    жінки будь-якого віку, а також літні чоловіки в віці від 55
+                </p>
+                <p>
+                    Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних захворювань.
+                    Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом гострий
+                    пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися пієлонефрит
+                    при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
+                    схильна до 1 з кожних 10 жінок.
+                </p>
+                <p>
+                    Факторами ризику можуть бути також:
+                </p>
+
+                <ul>
+                    <li>
+                        вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                    </li>
+                    <li>
+                        операції в області сечовидільної системи;
+                    </li>
+                    <li>
+                        установка катетера в сечовий міхур;
+                    </li>
+                    <li>
+                        травма спинного мозку
+                    </li>
+                    <li>
+                        випадання матки;
+                    </li>
+                    <li>
+                        СНІД.
+                    </li>
+                </ul>
+            </div>
+            <div class="wrap-btn">
+                <button class="show-more btn btn_glass">Більше інформації</button>
+            </div>
         </div>
     </section>
 
@@ -362,7 +364,7 @@
                     </div>
                     <h4 class="disease-list__title heading heading_h1">НЕФРОЛІТІАЗ</h4>
 
-                    <div class="disease-list__text">утворення каменів в нирках</div>
+                    <div class="disease-list__text">утворення каменів в нирках </div>
                 </li>
                 <li class="disease-list__item">
                     <div class="disease-list__icon">
