add section banner

--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
                         <div class="card-post__thumb" style="background-image: url(assets/img/thumb-post1.jpg);">
                             <div class="card-post__author">
                                 <div class="card-post__avatar">
-                                    <img src="assets/img/author.jpg" alt="">
+                                    <img src="assets/img/author.png" alt="">
                                 </div>
                                 <div class="info-author">
                                     <h3 class="heading heading_h5">Дмитро Дмитрович Іванов</h3>
@@ -137,7 +137,7 @@
                         <div class="card-post__thumb" style="background-image: url(assets/img/post-thumb2.jpg);">
                             <div class="card-post__author">
                                 <div class="card-post__avatar">
-                                    <img src="assets/img/author.jpg" alt="">
+                                    <img src="assets/img/author.png" alt="">
                                 </div>
                                 <div class="info-author">
                                     <h3 class="heading heading_h5">Дмитро Дмитрович Іванов</h3>
@@ -147,7 +147,7 @@
                         </div>
                         <div class="card-post__content">
                             <div class="card-post__date">03.08.2021</div>
-                            <h4 class="card-post__title heading heading_5">
+                            <h4 class="card-post__title heading heading_h5">
                                 Досвід застосування лікарського засобу Уролесан®
                                 при інфекції сечовивідних шляхів у чоловіків
                                 у практиці сімейного лікаря
@@ -167,7 +167,7 @@
                         <div class="card-post__thumb" style="background-image: url(assets/img/post-thumb3.jpg);">
                             <div class="card-post__author">
                                 <div class="card-post__avatar">
-                                    <img src="assets/img/author.jpg" alt="">
+                                    <img src="assets/img/author.png" alt="">
                                 </div>
                                 <div class="info-author">
                                     <h3 class="heading heading_h5">Дмитро Дмитрович Іванов</h3>
