--- a/index.html
+++ b/index.html
@@ -173,13 +173,51 @@
         </section>
 
         <section class="section-slider">
-            <div class="swiper-container about-urolesan">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
+            <!--<div class="wrapper-gif">-->
+                <!--<img src="assets/img/giphy-4.png" alt="">-->
+            <!--</div>-->
+            <div class="wrapper-slider">
+                <div class="wrapper-gif">
+                    <img src="assets/img/giphy-4.png" alt="">
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-container about-urolesan">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slide-about">
+                            <div class="slide-about__content">
+                                <h4 class="slide-about__heading heading">ІСТОРІЯ <br>
+                                    ВИНИКНЕННЯ </h4>
+                                <div class="counter-slide">01</div>
+                                <button class="btn btn_main">Детальніше про препарат</button>
+                            </div>
+                            <div class="slide-about__img">
+                                <img src="assets/img/gif-2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide slide-about">
+                            <div class="slide-about__content">
+                                <h4 class="slide-about__heading heading">ЕФЕКТИВНІСТЬ
+                                    ПРЕПАРАТУ </h4>
+                                <div class="counter-slide">02</div>
+                                <button class="btn btn_main">Детальніше про препарат</button>
+                            </div>
+                            <div class="slide-about__img">
+                                <img src="assets/img/gif-2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide slide-about">
+                            <div class="slide-about__content">
+                                <h4 class="slide-about__heading heading">ІСТОРІЯ <br>
+                                    ВИНИКНЕННЯ </h4>
+                                <div class="counter-slide">03</div>
+                                <button class="btn btn_main">Детальніше про препарат</button>
+                            </div>
+                            <div class="slide-about__img">
+                                <img src="assets/img/gif-2.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </section>
 
