--- a/single-article.html
+++ b/single-article.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <div class="article__header ">
-                        <h1 class="heading heading_2">
+                        <h1 class="heading heading_h2">
                             Досвід застосування лікарського засобу Уролесан®
                             при інфекції сечовивідних шляхів у чоловіків
                             у практиці сімейного лікаря
