add resp section-reason

--- a/kit.html
+++ b/kit.html
@@ -83,33 +83,35 @@
                 <div class="reason-list swiper-wrapper">
                     <div class="swiper-slide part part_left">
                         <div class="reason-list__item reason-list__item_1">
-                            <div class="reason-list__icon"><img src="assets/img/1.png" alt=""></div>
+                            <div class="reason-list__icon">
+                                <img src="assets/img/svg/1.svg" alt="">
+                            </div>
                             <p>Вживання води з великою кількістю мінералів</p>
                         </div>
 
 
                         <div class="reason-list__item reason-list__item_2">
-                            <div class="reason-list__icon"><img src="assets/img/2.png" alt=""></div>
+                            <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
                             <p>Харчування насичене високобілковими продуктами</p>
                         </div>
 
                         <div class="reason-list__item reason-list__item_3">
-                            <div class="reason-list__icon"><img src="assets/img/3.png" alt=""></div>
+                            <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
                             <p>Дефіцити окремих вітамінів групи В і вітамін А</p>
                         </div>
                     </div>
 
                     <div class="swiper-slide part part_right">
                         <div class="reason-list__item reason-list__item_4">
-                            <div class="reason-list__icon"><img src="assets/img/4.png" alt=""></div>
+                            <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
                             <p>Надмірне вживання алкоголю</p>
                         </div>
                         <div class="reason-list__item reason-list__item_5">
-                            <div class="reason-list__icon"><img src="assets/img/5.png" alt=""></div>
+                            <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
                             <p>Прийом деяких ліків не за інструкцією</p>
                         </div>
                         <div class="reason-list__item reason-list__item_6">
-                            <div class="reason-list__icon"><img src="assets/img/6.png" alt=""></div>
+                            <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
                             <p>Звужений просвіт сечовивідних шляхів</p>
                         </div>
                     </div>
