add resp popup, hover members

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <h4 class="slide-about__heading heading">ІСТОРІЯ <br>
                                     ВИНИКНЕННЯ </h4>
                                 <div class="counter-slide">01</div>
-                                <button class="btn btn_main">Детальніше про препарат</button>
+                                <a href="#" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
                                 <img src="assets/img/gif-2.png" alt="">
@@ -195,7 +195,7 @@
                                 <h4 class="slide-about__heading heading">ЕФЕКТИВНІСТЬ
                                     ПРЕПАРАТУ </h4>
                                 <div class="counter-slide">02</div>
-                                <button class="btn btn_main">Детальніше про препарат</button>
+                                <a href="page-effectiveness.html" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
                                 <img src="assets/img/gif-2.png" alt="">
@@ -203,10 +203,10 @@
                         </div>
                         <div class="swiper-slide slide-about">
                             <div class="slide-about__content">
-                                <h4 class="slide-about__heading heading">ІСТОРІЯ <br>
-                                    ВИНИКНЕННЯ </h4>
+                                <h4 class="slide-about__heading heading">СКЛАДОВІ <br>
+                                    ПРЕПАРАТУ </h4>
                                 <div class="counter-slide">03</div>
-                                <button class="btn btn_main">Детальніше про препарат</button>
+                                <a href="page-composition.html" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
                                 <img src="assets/img/gif-2.png" alt="">
@@ -242,16 +242,16 @@
                                     <span class="big">Уролесан <sup>&#174;</sup></span>
                                 </div>
                                 <div class="card-drug__footer">
-                                    <a href="#" class="btn btn_main">Дізнатися ціну</a>
+                                    <a href="#" class="open-modal btn btn_main">Дізнатися ціну</a>
                                     <a href="#" class="btn btn_outline">Інструкція</a>
                                 </div>
                             </div>
                             <div class="popover">
                                 <div class="popover__info">
                                     <h5 class="heading_h1">Дорослі
-                                        <div class="small">
+                                        <span class="small">
                                             від 14 років
-                                        </div>
+                                        </span>
                                     </h5>
                                     <div class="prescription">
                                         <div class="prescription__icon">
@@ -298,16 +298,16 @@
                                     <span class="big">Уролесан <sup>&#174;</sup></span>
                                 </div>
                                 <div class="card-drug__footer">
-                                    <a href="#" class="btn btn_main">Дізнатися ціну</a>
+                                    <a href="#" class="open-modal btn btn_main">Дізнатися ціну</a>
                                     <a href="#" class="btn btn_outline">Інструкція</a>
                                 </div>
                             </div>
                             <div class="popover">
                                 <div class="popover__info">
                                     <h5 class="heading_h1">Дорослі
-                                        <div class="small">
+                                        <span class="small">
                                             від 14 років
-                                        </div>
+                                        </span>
                                     </h5>
                                     <div class="prescription">
                                         <div class="prescription__icon">
@@ -354,16 +354,16 @@
                                     <span class="big">Уролесан <sup>&#174;</sup></span>
                                 </div>
                                 <div class="card-drug__footer">
-                                    <a href="#" class="btn btn_main">Дізнатися ціну</a>
+                                    <a href="#" class="open-modal btn btn_main">Дізнатися ціну</a>
                                     <a href="#" class="btn btn_outline">Інструкція</a>
                                 </div>
                             </div>
                             <div class="popover">
                                 <div class="popover__info">
                                     <h5 class="heading_h1">Дорослі
-                                        <div class="small">
+                                        <span class="small">
                                             від 14 років
-                                        </div>
+                                        </span>
                                     </h5>
                                     <div class="prescription">
                                         <div class="prescription__icon">
@@ -381,9 +381,9 @@
                                 </div>
                                 <div class="popover__info">
                                     <h5 class="heading_h1">Діти
-                                        <div class="small">
+                                        <span class="small">
                                             до 14 років
-                                        </div>
+                                        </span>
                                     </h5>
                                     <div class="prescription">
                                         <div class="prescription__icon">
@@ -429,13 +429,41 @@
                         виключно для медичних та фармацевтичних працівників.
                     </div>
                     <div class="wrap-btn">
-                        <a href="blog.html" class="btn btn_main">Детальніше</a>
+                        <a href="blog.html" class="bg-change btn btn_main">Детальніше</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
+    <div class="popup">
+        <h5 class="popup__title heading_h1">Підтвердити перехід
+            на зовнішній ресурс</h5>
+        <button class="modal-close"></button>
+        <div class="popup__content">
+            <div class="popup__text">
+                <p>
+                    Ви залишаєте сайт представництва компанії “АРТЕРІУМ”
+                    і переходите за посиланням, що надається
+                    в інформаційних цілях.
+                </p>
+                <p>
+                    Представництво “Артеріум” не несе відповідальності за інформацію, розміщену на зовнішніх
+                    ресурсах і
+                    не
+                    здійснює перевірку розміщеної на них інформації.
+                </p>
+                <p>
+                    Це посилання не є єдиним, що містить інформацію про ціни. Ви можете знайти інші посилання в
+                    мережі
+                    Інтернет.
+                </p>
+            </div>
+            <div class="popup__footer">
+                <a href="#" class="btn btn_main">Підтвердити</a>
+                <button class="close-popup btn btn_outline">Закрити</button>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer_top">
