--- a/kit.html
+++ b/kit.html
@@ -129,7 +129,7 @@
     <br><br><br><br>
     --------------------------------------------------------------------------------------------
 
-    <div class="container">
+    <div class="container" style="background-color: #59CE57; padding: 60px 0">
         <div class="popup">
             <div class="popup__content">
                 <h5 class="popup__title">Підтвердити перехід
