--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -172,51 +172,111 @@
                         шок
                     </li>
                 </ul>
-                <div class="block-more-info block-more-info_white text_md hide-info">
-                    <p>
-                        Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
-                        неправильній
-                        постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до 7
-                        років,
-                        жінки будь-якого віку, а також літні чоловіки в віці від 55
-                    </p>
-                    <p>
-                        Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
-                        захворювань.
-                        Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
-                        гострий
-                        пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
-                        пієлонефрит
-                        при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до якого
-                        схильна до 1 з кожних 10 жінок.
-                    </p>
-                    <p>
-                        Факторами ризику можуть бути також:
-                    </p>
+                <div class="spoiler one">
+                    <div class="block-more-info block-more-info_white text_md hide-info">
+                        <p>
+                            Ризик, що гострий пієлонефрит перейде в хронічний, досить високий. Це може статися при
+                            неправильній
+                            постановці діагнозу і помилковому лікуванні. У групі ризику захворювання перебувають діти до
+                            7
+                            років,
+                            жінки будь-якого віку, а також літні чоловіки в віці від 55
+                        </p>
+                        <p>
+                            Для розвитку недуги має співпасти декілька чинників. Одним з них є наявність системних
+                            захворювань.
+                            Будь-які інфекційні осередки в організмі теж підвищують ризики стати пацієнтом з діагнозом
+                            гострий
+                            пієлонефрит. Часто попереднім фактором стає цистит. У деяких випадках може розвиватися
+                            пієлонефрит
+                            при вагітності, оскільки нирки відчувають підвищене навантаження. Це небезпечний стан, до
+                            якого
+                            схильна до 1 з кожних 10 жінок.
+                        </p>
+                        <p>
+                            Факторами ризику можуть бути також:
+                        </p>
 
-                    <ul>
-                        <li>
-                            вроджені аномалії органів (уретра, нирки, сечовий міхур);
-                        </li>
-                        <li>
-                            операції в області сечовидільної системи;
-                        </li>
-                        <li>
-                            установка катетера в сечовий міхур;
-                        </li>
-                        <li>
-                            травма спинного мозку
-                        </li>
-                        <li>
-                            випадання матки;
-                        </li>
-                        <li>
-                            СНІД.
-                        </li>
-                    </ul>
-                </div>
-                <div class="wrap-btn">
+                        <ul>
+                            <li>
+                                вроджені аномалії органів (уретра, нирки, сечовий міхур);
+                            </li>
+                            <li>
+                                операції в області сечовидільної системи;
+                            </li>
+                            <li>
+                                установка катетера в сечовий міхур;
+                            </li>
+                            <li>
+                                травма спинного мозку
+                            </li>
+                            <li>
+                                випадання матки;
+                            </li>
+                            <li>
+                                СНІД.
+                            </li>
+                        </ul>
+                    </div>
                     <button class="show-more btn btn_glass">Більше інформації</button>
+                </div>
+            </div>
+        </section>
+        <section class="section-reason">
+            <div class="container">
+                <div class="section-reason__heading">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <h2 class="section-reason__title">
+                        <span class="text_uppercase ">ПРИЧИНИ</span><br>
+                        які провокують
+                        виникнення
+                        сечокам’яної
+                        хвороби
+                    </h2>
+                </div>
+
+                <div class="swiper-container reason-slider">
+                    <div class="reason-list swiper-wrapper">
+                        <div class="swiper-slide part part_left">
+                            <div class="reason-list__item reason-list__item_1">
+                                <div class="reason-list__icon">
+                                    <img src="assets/img/svg/1.svg" alt="">
+                                </div>
+                                <p>Вживання води з великою кількістю мінералів</p>
+                            </div>
+
+
+                            <div class="reason-list__item reason-list__item_2">
+                                <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
+                                <p>Харчування насичене високобілковими продуктами</p>
+                            </div>
+
+                            <div class="reason-list__item reason-list__item_3">
+                                <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
+                                <p>Дефіцити окремих вітамінів групи В і вітамін А</p>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide part part_right">
+                            <div class="reason-list__item reason-list__item_4">
+                                <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
+                                <p>Надмірне вживання алкоголю</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_5">
+                                <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
+                                <p>Прийом деяких ліків не за інструкцією</p>
+                            </div>
+                            <div class="reason-list__item reason-list__item_6">
+                                <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
+                                <p>Звужений просвіт сечовивідних шляхів</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
@@ -311,34 +371,38 @@
                     </div>
 
                 </div>
-                <div class="block-more-info block-more-info_white text_md hide-info">
-                    <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна та
-                        фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
-                        антибіотики
-                        при
-                        пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+                <div class="spoiler">
+                    <div class="block-more-info block-more-info_white text_md hide-info">
+                        <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
+                            та
+                            фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
+                            антибіотики
+                            при
+                            пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
 
-                    <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
-                        сечовипускання.
-                        Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
-                        комплексної
-                        терапії ступінь проявів симптомів знижується.</p>
+                        <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                            сечовипускання.
+                            Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
+                            комплексної
+                            терапії ступінь проявів симптомів знижується.</p>
 
-                    <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках. Ремісія
-                        періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під час
-                        ремісії
-                        обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+                        <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках.
+                            Ремісія
+                            періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під
+                            час
+                            ремісії
+                            обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
 
-                    <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть
-                        виникати
-                        через переохолодження. Дотримання рухової активності і режиму харчування можуть принести користь
-                        і
-                        на
-                        чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
-                        пієлонефриту.</p>
-                </div>
-                <div class="wrap-btn">
-                    <button class="show-more btn btn_glass">Більше інформації</button>
+                        <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть
+                            виникати
+                            через переохолодження. Дотримання рухової активності і режиму харчування можуть принести
+                            користь
+                            і
+                            на
+                            чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
+                            пієлонефриту.</p>
+                    </div>
+                    <button class="show-more btn btn_glass ">Більше інформації</button>
                 </div>
             </div>
         </section>
